--- a/test2/index.html
+++ b/test2/index.html
@@ -6,26 +6,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dialog Test 2</title>
+  <style>
+    dialog::backdrop {
+      background: hsl(200, 100%, 50%, 0.5);
+    }
+  </style>
 </head>
 
 <body>
   <h1>Dialog Test 2</h1>
   <button id="open">Open</button>
   <dialog id="modal">
-    <button id="close">Close</button>
+    <form>
+      <input type="text" />
+      <button type="submit" formmethod="dialog">Cancel</button>
+      <button type="submit">Submit</button>
+    </form>
   </dialog>
   <script>
     const openBtn = document.querySelector("#open");
-    const closeBtn = document.querySelector("#close");
+    //const closeBtn = document.querySelector("#close");
     const modal = document.querySelector("#modal");
 
-    closeBtn.addEventListener("click", () => {
-      modal.close();
-    });
+    //closeBtn.addEventListener("click", () => {
+    //  modal.close();
+    //});
 
     openBtn.addEventListener("click", () => {
-      console.log("open");
       modal.showModal();
+    });
+
+    modal.addEventListener("click", (e) => {
+      const modalDimensions = modal.getBoundingClientRect();
+      if (
+        e.clientX < modalDimensions.left ||
+        e.clientX > modalDimensions.right ||
+        e.clientY < modalDimensions.top ||
+        e.clientY > modalDimensions.bottom
+      )
+        modal.close();
     });
   </script>
 </body>
